assets/css/_sass/footer-social.scss
/* Social Icons for Footer from https://codepen.io/deutschland2k/pen/qKpdJX */
.rounded-social-buttons {
  text-align: center;
  opacity: 0;
  transition: opacity 0.1s ease-in;
}

//the font-awesome-loaded class is added to the body when fontawesome is loaded
//this is done to make the fontawesome icons appear at the same time as the custome CSS-only logos
//like the substack logo used below. The class is added in the default layout (_layouts/default.html)
body.fontawesome-loaded .rounded-social-buttons {
  opacity: 1;
}

.rounded-social-buttons .social-button {
  display: inline-flex;
  align-items: center;
  justify-content: center;
  vertical-align: middle;
  position: relative;
  cursor: pointer;
  width: 2.125rem;
  height: 2.125rem;
  border: 0.125rem solid transparent;
  padding: 0;
  text-decoration: none;
  color: #fefefe;
  font-size: 1.5625rem;
  font-weight: normal;
  border-radius: 1.6875rem;
  transition: all 0.5s ease;
  margin-right: 0.25rem;
  margin-bottom: 0.25rem;
}

.rounded-social-buttons .social-button:hover,
.rounded-social-buttons .social-button:focus {
  -webkit-transform: rotate(360deg);
  -ms-transform: rotate(360deg);
  transform: rotate(360deg);
}

.rounded-social-buttons,
.fa-facebook-f,
.fa-linkedin,
.fa-github,
.fa-orcid,
.fa-researchgate,
.fa-bluesky,
.fa-envelope,
.fa-quora,
.fa-instagram,
.fa-stack-overflow,
.fa-substack {
  font-size: 25px;
}

.rounded-social-buttons .social-button.facebook {
  background: #3b5998;
}

.rounded-social-buttons .social-button.facebook:hover,
.rounded-social-buttons .social-button.facebook:focus {
  color: #3b5998;
  background: #fefefe;
  border-color: #3b5998;
}

.rounded-social-buttons .social-button.linkedin {
  background: #007bb5;
}

.rounded-social-buttons .social-button.linkedin:hover,
.rounded-social-buttons .social-button.linkedin:focus {
  color: #007bb5;
  background: #fefefe;
  border-color: #007bb5;
}

.rounded-social-buttons .social-button.github {
  background: #000000;
}

.rounded-social-buttons .social-button.github:hover,
.rounded-social-buttons .social-button.github:focus {
  color: #000000;
  background: #fefefe;
  border-color: #000000;
}

.rounded-social-buttons .social-button.email {
  background: #60c17d;
}

.rounded-social-buttons .social-button.email:hover,
.rounded-social-buttons .social-button.email:focus {
  color: #60c17d;
  background: #fefefe;
  border-color: #000000;
}

.rounded-social-buttons .social-button.orcid {
  background: #a6ce3b;
}

.rounded-social-buttons .social-button.orcid:hover,
.rounded-social-buttons .social-button.orcid:focus {
  color: #a6ce3b;
  background: #fefefe;
  border-color: #a6ce3b;
}

.rounded-social-buttons .social-button.researchgate {
  background: #5dd1b0;
}

.rounded-social-buttons .social-button.researchgate:hover,
.rounded-social-buttons .social-button.researchgate:focus {
  color: #5dd1b0;
  background: #fefefe;
  border-color: #5dd1b0;
}

.rounded-social-buttons .social-button.bluesky {
  background: #74C0FC;
}

.rounded-social-buttons .social-button.bluesky:hover,
.rounded-social-buttons .social-button.bluesky:focus {
  color: #74C0FC;
  background: #fefefe;
  border-color: #74C0FC;
}

.rounded-social-buttons .social-button.quora {
  background: #a82400;
}

.rounded-social-buttons .social-button.quora:hover,
.rounded-social-buttons .social-button.quora:focus {
  color: #a82400;
  background: #fefefe;
  border-color: #a82400;
}

.rounded-social-buttons .social-button.instagram {
  background: -moz-linear-gradient(45deg, #f09433 0%, #e6683c 25%, #dc2743 50%, #cc2366 75%, #bc1888 100%) border-box;
  background: -webkit-linear-gradient(45deg, #f09433 0%, #e6683c 25%, #dc2743 50%, #cc2366 75%, #bc1888 100%) border-box;
  background: linear-gradient(45deg, #f09433 0%, #e6683c 25%, #dc2743 50%, #cc2366 75%, #bc1888 100%) border-box;
  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#f09433', endColorstr='#bc1888', GradientType=1);
  border: 0.125rem solid transparent;
}

.rounded-social-buttons .social-button.instagram:hover,
.rounded-social-buttons .social-button.instagram:focus-visible {
  background: linear-gradient(#fefefe, #fefefe) padding-box,
    linear-gradient(45deg, #f09433 0%, #e6683c 25%, #dc2743 50%, #cc2366 75%, #bc1888 100%) border-box;
  border-color: transparent;
}

.rounded-social-buttons .social-button.instagram:hover .fa-instagram,
.rounded-social-buttons .social-button.instagram:focus-visible .fa-instagram {
  background: linear-gradient(45deg, #f09433 0%, #e6683c 25%, #dc2743 50%, #cc2366 75%, #bc1888 100%);
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
  background-clip: text;
  color: transparent;
}

.rounded-social-buttons .social-button.stackoverflow {
  background: #f48024;
}

.rounded-social-buttons .social-button.stackoverflow:hover,
.rounded-social-buttons .social-button.stackoverflow:focus {
  color: #f48024;
  background: #fefefe;
  border-color: #f48024;
}

.rounded-social-buttons .social-button.substack {
  background: #ff6519;
}

.rounded-social-buttons .social-button.substack:hover,
.rounded-social-buttons .social-button.substack:focus {
  color: #ff6519;
  background: #fefefe;
  border-color: #ff6519;
}

//fontawesome does not have an existing logo for substack in https://fontawesome.com/search?ip=brands
//so adding a custom CSS logo as seen here: https://codepen.io/GabZoFar/pen/MYyZwZW

/*the middle bar of the substack logo acting as the positioning anchor*/
.rounded-social-buttons .social-button .substack-logo {
  display: inline-block;
  vertical-align: middle;
  position: relative;
  width: 0.7em;
  height: 0.1em;
  background: currentColor;
  border-radius: 1px;
  margin-top: -0.2em;
}

/*shared structural traits for the upper and lower logo components*/
.rounded-social-buttons .social-button .substack-logo::before,
.rounded-social-buttons .social-button .substack-logo::after {
  content: "";
  position: absolute;
  left: 0;
  right: 0;
  background: currentColor;
}

/*top horizontal line*/
.rounded-social-buttons .social-button .substack-logo::before {
  top: -0.2em;
  height: 0.1em;
  border-radius: 1px;
}

/*bottom ribbon component*/
.rounded-social-buttons .social-button .substack-logo::after {
  top: 0.2em;
  height: 0.35em;
  border-radius: 1px;
  clip-path: polygon(0 0,
      100% 0,
      100% 100%,
      50% 60%,
      0 100%);
}

